# shiny_deckgl

./: .gitignore  CHANGELOG.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  LICENSE  README.md  ROADMAP.md  bathy.asc  pyproject.toml
.claude/: settings.local.json
.github/workflows/: conda-build-upload.yml  python-package.yml
ags_IMOShipsRouteingGuide_1/: IMOShipsRouteingGuide_1.dbf  IMOShipsRouteingGuide_1.sbn  IMOShipsRouteingGuide_1.sbx  IMOShipsRouteingGuide_1.shp  IMOShipsRouteingGuide_1.shx  metadata.xml  metadata_catalog_url.txt
conda.recipe/: meta.yaml
docs/: api_reference.md  performance-patterns.md  user_manual.md
docs/_ags_Distribution_of_Baltic_seals_harbour_seal_HOLAS3/: metadata.xml  metadata_catalog_url.txt
docs/superpowers/plans/: 2026-03-10-shiny-deckgl-improvements.md
docs/superpowers/specs/: 2026-03-10-shiny-deckgl-improvements-design.md
examples/: demo.py
src/shiny_deckgl/: Sealmove.py  __init__.py  _animation.py  _app_server.py  _app_ui.py  _app_widgets.py  _cdn.py  _data_utils.py  _demo_css.py  _demo_data.py  _sealmove.py  _transitions.py  _types.py  _version.py  app.py  cli.py  colors.py  components.py  controls.py  effects.py  enums.py  extensions.py  ibm.py  layers.py  map_widget.py  parsers.py  ui.py  views.py  widgets.py
src/shiny_deckgl/_mixins/: __init__.py  drawing.py  export.py  maplibre_layers.py  navigation.py
src/shiny_deckgl/data/: helcom_mpa.geojson
src/shiny_deckgl/resources/: deckgl-init.js  styles.css
tests/: _diagnostic_deep.py  _diagnostic_playwright.py  test_app_modules.py  test_basic.py  test_benchmarks.py  test_data_utils.py  test_demo_deep.py  test_demo_playwright.py  test_e2e_playwright.py  test_error_handling.py  test_extensions.py  test_ibm.py  test_integration.py  test_mixins.py  test_parsers.py  test_property_based.py  test_sealmove.py  test_views.py  test_widgets.py
