[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shiny_deckgl"
dynamic = ["version"]
description = "Shiny for Python -> deck.gl bridge (no Java), with packaged assets and conda recipe"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Arturas Baziukas", email = "arturas.baziukas@ku.lt" }]
keywords = ["shiny", "deck.gl", "maplibre", "webgl", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Shiny",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "shiny>=1.0",
    "htmltools",
]

[project.optional-dependencies]
binary = ["numpy"]
geopandas = ["geopandas"]
dev = ["pytest", "numpy", "geopandas"]

[project.urls]
Homepage = "https://github.com/razinkele/shiny_deckgl"
Repository = "https://github.com/razinkele/shiny_deckgl"
Issues = "https://github.com/razinkele/shiny_deckgl/issues"
Changelog = "https://github.com/razinkele/shiny_deckgl/blob/main/CHANGELOG.md"

[project.scripts]
shiny_deckgl-demo = "shiny_deckgl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.dynamic]
version = {attr = "shiny_deckgl._version.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
shiny_deckgl = ["resources/*.js", "resources/*.css", "data/*.geojson", "py.typed"]
